# Pirate-Unified-Light-Wallet

./: .editorconfig  .gitattributes  .gitignore  .semgrep.yml  .semgrepignore  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  TODO.md  build-android-wsl.sh  build-rust-libs.ps1  build-rust-libs.sh  deny.toml  flake.nix  flutter_rust_bridge.yaml  generate_ffi_bindings.sh  mobsf_config.json  release-artifacts.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  (+1 more)
app/: DESIGN_SYSTEM.md  README.md  analysis_options.yaml  pubspec.yaml
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/pirate-cli-core/: Cargo.toml
crates/pirate-cli-core/src/: lib.rs
crates/pirate-core/: Cargo.toml
crates/pirate-core/fuzz/: Cargo.toml
crates/pirate-core/fuzz/fuzz_targets/: fuzz_address_decode.rs  fuzz_ivk_decode.rs  fuzz_memo_parse.rs  fuzz_mnemonic_parse.rs
crates/pirate-core/src/: address.rs  change_policy.rs  debug_log.rs  diversifier.rs  error.rs  fees.rs  keys.rs  lib.rs  memo.rs  mnemonic.rs  notes.rs  params.rs  qortal_p2sh.rs  selection.rs  shielded_builder.rs  transaction.rs  wallet.rs
crates/pirate-core/tests/: property_tests.proptest-regressions  property_tests.rs  transaction_integration_test.rs
crates/pirate-ffi-frb/: Cargo.toml  build.rs  cbindgen.toml  frb.toml
crates/pirate-ffi-frb/src/: api.rs  background.rs  bridge_generated.rs  frb_generated.rs  lib.rs  models.rs  streams.rs
crates/pirate-ffi-frb/src/api/: addresses.rs  api_regression_tests.rs  background_sync.rs  diagnostics.rs  encrypted_db.rs  endpoint.rs  key_management.rs  panic_duress.rs  provisioning.rs  seed_export.rs  sync_control.rs  tunnel.rs  tx_flow.rs  wallet_registry.rs
crates/pirate-ffi-frb/tests/: balance_spendability_guards.rs  send_flow_guards.rs
crates/pirate-ffi-native/: Cargo.toml  cbindgen.toml  pirate_wallet_service.h
crates/pirate-ffi-native/src/: lib.rs
crates/pirate-ffi-native/tests/: json_abi.rs
crates/pirate-mm2/: Cargo.toml
crates/pirate-mm2/src/: binary.rs  client.rs  config.rs  error.rs  lib.rs  manager.rs  swap.rs
crates/pirate-name-resolution/: Cargo.toml
crates/pirate-name-resolution/src/: lib.rs  openalias.rs  unstoppable.rs
crates/pirate-net/: Cargo.toml
crates/pirate-net/src/: debug_log.rs  dns.rs  error.rs  i2p.rs  lib.rs  lightwalletd_pins.rs  proxy.rs  tls.rs  tor.rs  transport.rs  transport_config.rs
crates/pirate-net/tests/: dns_leak_test.rs  tls_mitm_tests.rs  transport_e2e_tests.rs
crates/pirate-params/: Cargo.toml
crates/pirate-params/src/: checkpoints.rs  consensus.rs  lib.rs  network.rs
crates/pirate-qortal-cli/: Cargo.toml  README.md
crates/pirate-qortal-cli/src/: main.rs
crates/pirate-qortal-jni/: Cargo.toml
crates/pirate-qortal-jni/src/: lib.rs
crates/pirate-storage-sqlite/: Cargo.toml
crates/pirate-storage-sqlite/src/: address_book.rs  checkpoints.rs  database.rs  decoy_vault.rs  encryption.rs  error.rs  frontier.rs  frontier_witness.rs  keystore.rs  lib.rs  migrations.rs  models.rs  passphrase_store.rs  repository.rs  scan_queue.rs  screenshot_guard.rs  secure_clipboard.rs  security.rs  seed_export.rs  shardtree_serialization.rs  shardtree_store.rs  spendability_state.rs  sync_state.rs  watch_only.rs
crates/pirate-storage-sqlite/src/repository/: address.rs
crates/pirate-storage-sqlite/tests/: migration_snapshots.rs  migration_tests.rs  security_tests.rs  spendability_state_tests.rs  witness_anchor_consistency.rs
crates/pirate-sync-lightd/: Cargo.toml  build.rs
crates/pirate-sync-lightd/assets/tor/: snowflake_bridges.txt
crates/pirate-sync-lightd/proto/: service.proto
crates/pirate-sync-lightd/src/: background.rs  background_logger.rs  block_cache.rs  bridge_tree_codec.rs  cancel.rs  client.rs  error.rs  frontier.rs  lib.rs  orchard_frontier.rs  pipeline.rs  privacy.rs  progress.rs  proto_types.rs  sync.rs  sync_profile.rs
crates/pirate-sync-lightd/src/orchard/: full_decrypt.rs  mod.rs  trial_decrypt.rs
crates/pirate-sync-lightd/src/sapling/: full_decrypt.rs  mod.rs  trial_decrypt.rs
crates/pirate-sync-lightd/src/sync/: shardtree_support.rs
crates/pirate-sync-lightd/tests/: client_integration.rs  interrupt.rs  performance.rs  performance_benchmarks.rs  witness_repair_queue_behavior.rs
crates/pirate-sync-oblivious/: Cargo.toml
crates/pirate-sync-oblivious/src/: lib.rs  provider.rs
crates/pirate-wallet-service/: Cargo.toml
crates/pirate-wallet-service/src/: api.rs  lib.rs  models.rs  service.rs  streams.rs
crates/pirate-wallet-service/src/api/: address_book.rs  addresses.rs  api_regression_tests.rs  background_sync.rs  encrypted_db.rs  endpoint.rs  key_management.rs  panic_duress.rs  payment_disclosure.rs  provisioning.rs  qortal.rs  qortal_p2sh.rs  seed_export.rs  sync_control.rs  tunnel.rs  tx_flow.rs  wallet_registry.rs
crates/pirate-wallet-service/tests/: service_json.rs
crates/piratewallet-cli/: Cargo.toml  README.md
crates/piratewallet-cli/src/: main.rs
crates/tools/sync-harness/: Cargo.toml  README.md
crates/tools/sync-harness/src/: main.rs
docs/: audit-2026-03-31.md  cli.md  migration.md  native-sdk-android-api.md  native-sdk-android.md  native-sdk-ios-api.md  native-sdk-ios.md  qortal-cli.md  qortal-handoff.md  react-native-plugin.md  release-process.md  security.md  verify-build.md
scripts/: build-android-msys2.sh  build-android-sdk.sh  build-android.sh  build-cli.sh  build-ios-sdk.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-native-ffi.sh  build-qortal-jni.sh  build-rust-android.sh  build-windows.sh  check_pinned_actions.py  cleanup-build-intermediates.sh  collect-github-release-assets.sh  detect-release-artifacts.py  e2e-preflight.sh  fetch-tor-i2p-assets.ps1  fetch-tor-i2p-assets.sh  generate-icons.ps1  generate-ios-spm-release-manifest.sh  generate-provenance.sh  generate-sbom.sh  ndk-clang-wrapper.sh  prefetch-kdf-artifact.sh  prefetch-kdf-ios.sh  prepare-komodo-assets.sh  prepare-react-native-plugin.sh  sync-version-from-tag.sh  verify-kdf-artifacts.sh  verify-macos-dmg.sh  verify-toolchain.sh  virustotal_scan.py  (+1 more)
(+312 files in other folders)
