[workspace]
resolver = "2"

members = [
    "pirate-core",
    "pirate-params",
    "pirate-storage-sqlite",
    "pirate-sync-lightd",
    "pirate-sync-oblivious",
    "pirate-net",
    # "pirate-mm2",  # Feature-flagged, not implemented yet
    # "pirate-name-resolution",  # Feature-flagged, not implemented yet
    "pirate-ffi-frb",
    "tools/sync-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pirate Chain Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pirate-chain/pirate-unified-wallet"

[workspace.dependencies]
# Zcash/Librustzcash - Pirate fork (pirate_master_node_13.0 branch)
zcash_primitives = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
zcash_client_backend = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
zcash_proofs = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
# NOTE: We use crates.io here to match the `orchard` crate's `zcash_note_encryption` dependency
# so the `Domain` + `ShieldedOutput` trait impls line up (avoids duplicate versions in the graph).
zcash_note_encryption = "0.4.1"
zcash_address = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
zcash_history = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
sapling-crypto = "0.3"
orchard = "0.6"
wagyu-zcash-parameters = "0.2"
incrementalmerkletree = "0.5"
base64ct = "1.5.3"
password-hash = "0.5.0"
pbkdf2 = "0.12.1"
bellman = "0.14"
bls12_381 = "0.8"

# Core crypto primitives (stable versions)
bip32 = "0.5"
bip39 = "2.1"
blake2b_simd = "1.0"
blake2s_simd = "1.0"
sha2 = "0.10"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1.8"
rand = "0.8"

# Encoding/Decoding
prost = "0.13"
bech32 = "0.11"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Networking
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
hyper = { version = "1.5", features = ["full"] }
tower = "0.5"

# Tor/Arti for privacy
arti-client = "0.39"
tor-rtcompat = "0.39"

# Storage
rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl", "modern_sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.5"
tempfile = "3.13"

# FFI
flutter_rust_bridge = "2.6"

# Utilities
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1.20"

[patch.crates-io]
zcash_address = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
zcash_encoding = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
zcash_primitives = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
zcash_proofs = { git = "https://github.com/piratenetwork/librustzcash", branch = "pirate_master_node_13.0" }
