[workspace]
resolver = "2"

members = [
    "pirate-core",
    "pirate-params",
    "pirate-storage-sqlite",
    "pirate-sync-lightd",
    "pirate-sync-oblivious",
    "pirate-net",
    "pirate-wallet-service",
    "pirate-cli-core",
    "piratewallet-cli",
    "pirate-qortal-cli",
    "pirate-qortal-jni",
    "pirate-ffi-native",
    # "pirate-name-resolution",  # Feature-flagged, not implemented yet
    "pirate-ffi-frb",
    "tools/sync-harness",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Pirate Chain Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pirate-chain/pirate-unified-wallet"

[workspace.dependencies]
# Shielded protocol dependencies - pinned to the full-node core revisions.
zcash_primitives = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab", features = ["non-standard-fees", "transparent-inputs"] }
zcash_client_backend = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab", features = ["orchard"] }
zcash_proofs = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_note_encryption = { git = "https://github.com/PirateNetwork/zcash_note_encryption.git", rev = "ede44ea608e667c78309c598fbf4d70f69c15c29" }
zcash_address = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_encoding = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_history = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_keys = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab", features = ["std", "sapling", "orchard"] }
zcash_protocol = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab", features = ["local-consensus"] }
zcash_transparent = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab", features = ["transparent-inputs"] }
sapling = { package = "sapling-crypto", git = "https://github.com/piratenetwork/sapling-crypto.git", rev = "62fcf59a4d933244ee6280182c6cd3e5290e8a90" }
sapling-crypto = { git = "https://github.com/piratenetwork/sapling-crypto.git", rev = "62fcf59a4d933244ee6280182c6cd3e5290e8a90" }
orchard = { git = "https://github.com/PirateNetwork/orchard.git", rev = "af86f0b2603d149ee2e7da7ce195ee8cd46c7664" }
wagyu-zcash-parameters = "0.2"
incrementalmerkletree = { version = "0.8.2", features = ["legacy-api"] }
shardtree = { version = "0.6.2", features = ["legacy-api"] }
zip32 = "0.2.1"
base64ct = "1.5.3"
password-hash = "0.5.0"
pbkdf2 = "0.12.1"
bellman = "0.14"
bls12_381 = "0.8"

# Core crypto primitives (stable versions)
bip32 = "0.5"
bip39 = { version = "2.1", features = [
    "chinese-simplified",
    "chinese-traditional",
    "french",
    "italian",
    "japanese",
    "korean",
    "spanish",
] }
blake2b_simd = "1.0"
blake2s_simd = "1.0"
sha2 = "0.10"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1.8"
rand = "0.8"

# Encoding/Decoding
prost = "0.13"
bech32 = "0.11"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Networking
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
hyper = { version = "1.5", features = ["full"] }
tower = "0.5"

# Tor/Arti for privacy
arti-client = "0.39"
tor-rtcompat = "0.39"

# Storage
rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl", "modern_sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.11"

# Testing
proptest = "1.5"
tempfile = "3.13"

# FFI
flutter_rust_bridge = "2.6"

# Utilities
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1.20"

[patch.crates-io]
halo2_gadgets = { git = "https://github.com/PirateNetwork/halo2.git", rev = "261faaccd5a30c19bb8468600841a0dac305adf5" }
halo2_poseidon = { git = "https://github.com/PirateNetwork/halo2.git", rev = "261faaccd5a30c19bb8468600841a0dac305adf5" }
halo2_proofs = { git = "https://github.com/PirateNetwork/halo2.git", rev = "261faaccd5a30c19bb8468600841a0dac305adf5" }
orchard = { git = "https://github.com/PirateNetwork/orchard.git", rev = "af86f0b2603d149ee2e7da7ce195ee8cd46c7664" }
sapling-crypto = { git = "https://github.com/piratenetwork/sapling-crypto.git", rev = "62fcf59a4d933244ee6280182c6cd3e5290e8a90" }
zcash_address = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_encoding = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_keys = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_note_encryption = { git = "https://github.com/PirateNetwork/zcash_note_encryption.git", rev = "ede44ea608e667c78309c598fbf4d70f69c15c29" }
zcash_primitives = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_proofs = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_protocol = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_transparent = { git = "https://github.com/piratenetwork/librustzcash", rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
