[package]
name = "pirate-cli-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pirate-wallet-service = { path = "../pirate-wallet-service" }
pirate-core = { path = "../pirate-core" }
pirate-storage-sqlite = { path = "../pirate-storage-sqlite" }

anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = "1.3"
tokio = { workspace = true }
