[package]
name = "pirate-ffi-frb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = []
# Enable FRB generated code (after running flutter_rust_bridge_codegen)
frb = []

[dependencies]
pirate-core = { path = "../pirate-core" }
pirate-params = { path = "../pirate-params" }
pirate-storage-sqlite = { path = "../pirate-storage-sqlite" }
pirate-sync-lightd = { path = "../pirate-sync-lightd" }
# pirate-net is optional - not needed for direct wifi connections
# pirate-net = { path = "../pirate-net", optional = true }

flutter_rust_bridge = "=2.11.1"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
lazy_static = "1.5"
hex = { workspace = true }
num_cpus = "1.16"
rand = { workspace = true }
futures = "0.3"
sha2 = "0.10"
orchard = { workspace = true }
zcash_primitives = { workspace = true }
zcash_client_backend = { workspace = true }
bech32 = { workspace = true }
rusqlite = { workspace = true }
directories = "5.0"

[dev-dependencies]

[build-dependencies]
chrono = { workspace = true }
