[package]
name = "pirate-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Tor/Arti for privacy-first networking
arti-client = { workspace = true, features = ["bridge-client", "pt-client"] }
tor-rtcompat = { workspace = true }

tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
tower = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
tokio-socks = "0.5"
directories = "5.0"
reqwest = { version = "0.12", features = ["socks"] }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
