[package]
name = "pirate-storage-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
native-keystore = []

[dependencies]
pirate-core = { path = "../pirate-core" }
pirate-params = { path = "../pirate-params" }

# Protocol primitives for note deserialization
zcash_primitives = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_protocol = { workspace = true }
sapling = { workspace = true }
orchard = { workspace = true }
incrementalmerkletree = { workspace = true }
shardtree = { workspace = true }
zcash_encoding = { workspace = true }
byteorder = "1.5"
jubjub = "0.10"

rusqlite = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
directories = "5.0"

# Crypto deps for encryption
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true, features = ["std"] }
rand = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
