[package]
name = "pirate-wallet-service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pirate-core = { path = "../pirate-core" }
pirate-params = { path = "../pirate-params" }
pirate-storage-sqlite = { path = "../pirate-storage-sqlite" }
pirate-sync-lightd = { path = "../pirate-sync-lightd" }

anyhow = { workspace = true }
bech32 = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
directories = "5.0"
flutter_rust_bridge = "=2.11.1"
futures = "0.3"
hex = { workspace = true }
lazy_static = "1.5"
num_cpus = "1.16"
orchard = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
secp256k1 = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }

[dev-dependencies]
incrementalmerkletree = { workspace = true }
shardtree = "0.1"
tempfile = { workspace = true }
